# obision-app-store

./: .gitignore  README.md  meson.build  package-lock.json  package.json  tsconfig.json
.github/: copilot-instructions.md
data/: com.obision.ObisionAppStore.desktop.in  com.obision.ObisionAppStore.gresource.xml  com.obision.ObisionAppStore.gschema.xml  com.obision.ObisionStore.desktop.in  com.obision.ObisionStore.gresource.xml  com.obision.ObisionStore.gschema.xml  gschemas.compiled  obision.app.store.desktop.in  obision.app.store.gresource.xml  obision.app.store.gschema.xml  style.css
data/ui/: app-details.ui  categories.ui  featured.ui  installed.ui  main.ui  updates.ui
data/ui/atoms/: app-card-carousel.ui  app-card-mini.ui  category-big.ui
scripts/: build.js
src/: main.ts
src/components/: app-details.ts  categories.ts  featured.ts  installed.ts  updates.ts
src/components/atoms/: app-card-carousel.ts  app-card-mini.ts  category-big.ts
src/constants/: theme.ts
src/interfaces/: application.ts  category.ts  package.ts  update.ts
src/services/: apps-service.ts  cache-service.ts  categories-service.ts  debian-service.ts  flatpak-service.ts  packages-service.ts  settings-service.ts  updates-service.ts  utils-service.ts
